--- a/other_hand_features/other_models_from_hand_feats_v8_hog.ipynb
+++ b/other_hand_features/other_models_from_hand_feats_v8_hog.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -48,10 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -110,10 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -129,10 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 58,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import decomposition\n",
@@ -144,10 +136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -163,10 +153,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -182,10 +170,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -202,10 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 62,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -249,30 +233,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 63,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression(C=2.0, class_weight=None, dual=False, fit_intercept=True,\n",
+      "LogisticRegression(C=4.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
       "          verbose=0, warm_start=False)\n",
-      "this fold train loss 0.269593680574 val loss 0.402170416805\n",
+      "this fold train loss 0.269386466638 val loss 0.404149132428\n",
       "============================\n",
-      "this fold train loss 0.260024213121 val loss 0.434825632644\n",
+      "this fold train loss 0.259653462977 val loss 0.440906650833\n",
       "============================\n",
-      "this fold train loss 0.284566432634 val loss 0.320029915382\n",
+      "this fold train loss 0.284374275615 val loss 0.320693930304\n",
       "============================\n",
-      "this fold train loss 0.271157241294 val loss 0.389175990056\n",
+      "this fold train loss 0.270894964677 val loss 0.392390795125\n",
       "============================\n",
-      "this fold train loss 0.284033309107 val loss 0.332814600544\n",
+      "this fold train loss 0.283805048447 val loss 0.334623992915\n",
       "============================\n",
-      "all avg 0.273874975346 0.375803311086\n"
+      "all avg 0.273622843671 0.378552900321\n"
      ]
     }
    ],
@@ -281,7 +263,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "lr_train,lr_pred = cv_feat(LogisticRegression,\n",
     "                           fold_cnt=5,\n",
-    "                           params={'C':2.0,'max_iter':100},rnd=2)\n",
+    "                           params={'C':4.0,'max_iter':100},rnd=2)\n",
     "import pickle\n",
     "with open('../features/other_model_lr8.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
@@ -289,10 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -332,10 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# tmp_params = {\n",
@@ -350,10 +328,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 66,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -400,34 +376,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 67,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBClassifier(base_score=0.5, colsample_bylevel=1, colsample_bytree=1,\n",
-      "       gamma=0, learning_rate=0.1, max_delta_step=0, max_depth=3,\n",
-      "       min_child_weight=1, missing=None, n_estimators=50, nthread=-1,\n",
-      "       objective='binary:logistic', reg_alpha=0, reg_lambda=1,\n",
-      "       scale_pos_weight=1, seed=0, silent=True, subsample=1)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.5/dist-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+      "       colsample_bytree=1, gamma=0, learning_rate=0.1, max_delta_step=0,\n",
+      "       max_depth=3, min_child_weight=1, missing=None, n_estimators=50,\n",
+      "       n_jobs=1, nthread=None, objective='binary:logistic', random_state=0,\n",
+      "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+      "       silent=True, subsample=1)\n",
       "this fold train loss 0.263670170265 val loss 0.388673091864\n",
       "============================\n",
       "this fold train loss 0.271266560518 val loss 0.376387626559\n",
@@ -460,21 +421,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "No module named 'lightgbm'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-ed4c29283952>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlightgbm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLGBMClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m tmp_params = {\n\u001b[1;32m      3\u001b[0m     \u001b[0;34m'max_depth'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m'n_estimators'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m500\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m#'min_child_samples':20,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named 'lightgbm'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LGBMClassifier(boosting_type='gbdt', colsample_bytree=1.0, learning_rate=0.1,\n",
+      "        max_bin=255, max_depth=3, min_child_samples=20,\n",
+      "        min_child_weight=0.001, min_split_gain=0.0, n_estimators=500,\n",
+      "        n_jobs=-1, num_leaves=31, objective=None, random_state=None,\n",
+      "        reg_alpha=0.0, reg_lambda=0.0, silent=True, subsample=1.0,\n",
+      "        subsample_for_bin=200000, subsample_freq=1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:642: UserWarning: max_bin keyword has been found in `params` and will be ignored. Please use max_bin argument of the Dataset constructor to pass this parameter.\n",
+      "  'Please use {0} argument of the Dataset constructor to pass this parameter.'.format(key))\n",
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:648: LGBMDeprecationWarning: The `max_bin` parameter is deprecated and will be removed in 2.0.12 version. Please use `params` to pass this parameter.\n",
+      "  'Please use `params` to pass this parameter.', LGBMDeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this fold train loss 0.00961449217188 val loss 0.371308823045\n",
+      "============================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:642: UserWarning: max_bin keyword has been found in `params` and will be ignored. Please use max_bin argument of the Dataset constructor to pass this parameter.\n",
+      "  'Please use {0} argument of the Dataset constructor to pass this parameter.'.format(key))\n",
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:648: LGBMDeprecationWarning: The `max_bin` parameter is deprecated and will be removed in 2.0.12 version. Please use `params` to pass this parameter.\n",
+      "  'Please use `params` to pass this parameter.', LGBMDeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this fold train loss 0.00778771877931 val loss 0.397186026636\n",
+      "============================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:642: UserWarning: max_bin keyword has been found in `params` and will be ignored. Please use max_bin argument of the Dataset constructor to pass this parameter.\n",
+      "  'Please use {0} argument of the Dataset constructor to pass this parameter.'.format(key))\n",
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:648: LGBMDeprecationWarning: The `max_bin` parameter is deprecated and will be removed in 2.0.12 version. Please use `params` to pass this parameter.\n",
+      "  'Please use `params` to pass this parameter.', LGBMDeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this fold train loss 0.00973853810493 val loss 0.361505680826\n",
+      "============================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:642: UserWarning: max_bin keyword has been found in `params` and will be ignored. Please use max_bin argument of the Dataset constructor to pass this parameter.\n",
+      "  'Please use {0} argument of the Dataset constructor to pass this parameter.'.format(key))\n",
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:648: LGBMDeprecationWarning: The `max_bin` parameter is deprecated and will be removed in 2.0.12 version. Please use `params` to pass this parameter.\n",
+      "  'Please use `params` to pass this parameter.', LGBMDeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this fold train loss 0.0100531103306 val loss 0.325669121834\n",
+      "============================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:642: UserWarning: max_bin keyword has been found in `params` and will be ignored. Please use max_bin argument of the Dataset constructor to pass this parameter.\n",
+      "  'Please use {0} argument of the Dataset constructor to pass this parameter.'.format(key))\n",
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:648: LGBMDeprecationWarning: The `max_bin` parameter is deprecated and will be removed in 2.0.12 version. Please use `params` to pass this parameter.\n",
+      "  'Please use `params` to pass this parameter.', LGBMDeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this fold train loss 0.00939053722775 val loss 0.374439296618\n",
+      "============================\n",
+      "all avg 0.00931687932289 0.366021789792\n"
      ]
     }
    ],
