--- a/ensemble/lr_ensemble-some_2nd.ipynb
+++ b/ensemble/lr_ensemble-some_2nd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -15,33 +15,10 @@
       "'../2nd_features/cnn_4_aug_1_fold5_feat.pkl',\n",
       "'../2nd_features/cnn_5_aug_1_fold5_feat.pkl',\n",
       "'../2nd_features/incept_aug2_feat.pkl',\n",
-      "'../2nd_features/other_model_gbrt.pkl',\n",
-      "'../2nd_features/other_model_gbrt2.pkl',\n",
-      "'../2nd_features/other_model_gbrt4.pkl',\n",
-      "'../2nd_features/other_model_gbrt5.pkl',\n",
-      "'../2nd_features/other_model_gbrt6.pkl',\n",
       "'../2nd_features/other_model_gbrt7.pkl',\n",
-      "'../2nd_features/other_model_lgb.pkl',\n",
-      "'../2nd_features/other_model_lgb2.pkl',\n",
-      "'../2nd_features/other_model_lgb4.pkl',\n",
-      "'../2nd_features/other_model_lgb5.pkl',\n",
-      "'../2nd_features/other_model_lgb6.pkl',\n",
       "'../2nd_features/other_model_lgb7.pkl',\n",
-      "'../2nd_features/other_model_lr.pkl',\n",
-      "'../2nd_features/other_model_lr2.pkl',\n",
-      "'../2nd_features/other_model_lr4.pkl',\n",
       "'../2nd_features/other_model_lr7.pkl',\n",
-      "'../2nd_features/other_model_rf.pkl',\n",
-      "'../2nd_features/other_model_rf2.pkl',\n",
-      "'../2nd_features/other_model_rf4.pkl',\n",
-      "'../2nd_features/other_model_rf5.pkl',\n",
-      "'../2nd_features/other_model_rf6.pkl',\n",
       "'../2nd_features/other_model_rf7.pkl',\n",
-      "'../2nd_features/other_model_xgb.pkl',\n",
-      "'../2nd_features/other_model_xgb2.pkl',\n",
-      "'../2nd_features/other_model_xgb4.pkl',\n",
-      "'../2nd_features/other_model_xgb5.pkl',\n",
-      "'../2nd_features/other_model_xgb6.pkl',\n",
       "'../2nd_features/other_model_xgb7.pkl',\n",
       "'../2nd_features/resnet_aug2_feat.pkl',\n",
       "'../2nd_features/vgg_aug1_new_feat.pkl',\n",
@@ -63,8 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -84,9 +63,9 @@
     "'../2nd_features/incept_aug2_feat.pkl',\n",
     "#'../2nd_features/other_model_gbrt.pkl',\n",
     "#'../2nd_features/other_model_gbrt2.pkl',\n",
-    "'../2nd_features/other_model_gbrt4.pkl',\n",
+    "'../features/other_model_gbrt4.pkl',\n",
     "#'../2nd_features/other_model_gbrt5.pkl',\n",
-    "'../2nd_features/other_model_gbrt6.pkl',\n",
+    "'../features/other_model_gbrt6.pkl',\n",
     "#'../2nd_features/other_model_gbrt7.pkl',\n",
     "#'../2nd_features/other_model_lgb.pkl',\n",
     "#'../2nd_features/other_model_lgb2.pkl',\n",
@@ -100,14 +79,14 @@
     "#'../2nd_features/other_model_lr7.pkl',\n",
     "#'../2nd_features/other_model_rf.pkl',\n",
     "#'../2nd_features/other_model_rf2.pkl',\n",
-    "'../2nd_features/other_model_rf4.pkl',\n",
-    "'../2nd_features/other_model_rf5.pkl',\n",
-    "'../2nd_features/other_model_rf6.pkl',\n",
+    "'../features/other_model_rf4.pkl',\n",
+    "'../features/other_model_rf5.pkl',\n",
+    "'../features/other_model_rf6.pkl',\n",
     "'../2nd_features/other_model_rf7.pkl',\n",
     "#'../2nd_features/other_model_xgb.pkl',\n",
     "#'../2nd_features/other_model_xgb2.pkl',\n",
-    "'../2nd_features/other_model_xgb4.pkl',\n",
-    "'../2nd_features/other_model_xgb5.pkl',\n",
+    "'../features/other_model_xgb4.pkl',\n",
+    "'../features/other_model_xgb5.pkl',\n",
     "#'../2nd_features/other_model_xgb6.pkl',\n",
     "'../2nd_features/other_model_xgb7.pkl',\n",
     "'../2nd_features/resnet_aug2_feat.pkl',\n",
@@ -208,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
