check late 10 fold, no help

--- a/ensemble/xgb_ensemble-all.ipynb
+++ b/ensemble/xgb_ensemble-all.ipynb
@@ -425,6 +425,93 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.636223\tvalid-logloss:0.639021\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[109]\ttrain-logloss:0.044705\tvalid-logloss:0.160686\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636291\tvalid-logloss:0.639439\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[111]\ttrain-logloss:0.050781\tvalid-logloss:0.121285\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636588\tvalid-logloss:0.638314\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[140]\ttrain-logloss:0.036119\tvalid-logloss:0.11023\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636597\tvalid-logloss:0.637326\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[159]\ttrain-logloss:0.031954\tvalid-logloss:0.089945\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636088\tvalid-logloss:0.640566\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[57]\ttrain-logloss:0.079653\tvalid-logloss:0.187974\n",
+      "\n",
+      "[0]\ttrain-logloss:0.63665\tvalid-logloss:0.639297\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[112]\ttrain-logloss:0.048691\tvalid-logloss:0.112537\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636301\tvalid-logloss:0.638298\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[83]\ttrain-logloss:0.062207\tvalid-logloss:0.146452\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637035\tvalid-logloss:0.639036\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[119]\ttrain-logloss:0.048575\tvalid-logloss:0.082459\n",
+      "\n",
+      "[0]\ttrain-logloss:0.635982\tvalid-logloss:0.639169\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[58]\ttrain-logloss:0.081374\tvalid-logloss:0.163901\n",
+      "\n",
+      "[0]\ttrain-logloss:0.635921\tvalid-logloss:0.639344\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[89]\ttrain-logloss:0.058834\tvalid-logloss:0.169607\n",
+      "\n",
+      "local average valid loss 0.136967201928 val loss std 0.0346762357844\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv_test(10,42,True,500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
